<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="err_enter_description">Please enter description</string>
    <string name="button_ok_reminders">OK</string>
    <string name="reminders_deleted">Reminders Deleted !</string>
    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_button">Floating Action Buttong</string>
    <string name="current_location_is_empty">Current location is null. Using defaults.</string>
    <string name="location_exception">Exception</string>
    <string name="custom_location">Custom Location Indicated</string>
    <string name="style_exception">Can not Find Style. Error</string>
    <string name="style_parsing_error">Style parsing failed</string>
    <string name="foreground_only_location_permission">Request foreground only location permission</string>
    <string name="error_location_settings">Error getting location settings resolution</string>
    <string name="geofence_added">Added Geofence</string>
    <string name="geofence_broadcast_error">Geofence broadcast error</string>
    <string name="geoservice_error">Geofence Transition Job Intent Service Error</string>
    <string name="title_detail">Geofencing</string>
    <string name="sometitle">sometitle</string>
    <string name="reminder_not_found">Reminder not found!</string>
    <string name="latitudeText">Latitude</string>
    <string name="longitudeText">Longitude</string>

    <!--    Geofence Status Strings-->
    <string name="geofences_added">Clue Geofence added.</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofence_over">You have entered into fence! Congratulations!</string>

    <!-- Geofence Hints -->
    <string name="not_started_hint"></string>
    <string name="golden_gate_bridge_hint">Go to a bridge with a name that does not match the color that it is!</string>
    <string name="ferry_building_hint">Go to a market with an amazing assortment of delicious foods. It is a San Francisco classic!</string>
    <string name="pier_39_hint">Go to a pier popular for tourist attractions, carnival games, fresh fish, and delicious sourdough bread!</string>
    <string name="union_square_hint">Go to a square named after Civil War rallies held there, but now known for its amazing shopping!</string>

    <!-- Geofence Locations -->
    <string name="golden_gate_bridge_location">at the Golden Gate bridge</string>
    <string name="ferry_building_location">in the Ferry Building</string>
    <string name="pier_39_location">at Pier 39</string>
    <string name="union_square_location">in Union Square</string>

    <!-- Error strings -->

    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>

    <string name="geofences_not_removed">Geofences not removed.</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="geofence_error">There was an error in finding your treasure</string>


    <!-- Content Description Strings -->
    <string name="android_map_description">An Android robot with a map</string>
    <string name="title_item_text">Title</string>
    <string name="description_item_text">Description</string>
    <string name="see_location_details">See location details</string>


    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.udacity.project4.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
</resources>
