<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutMaps"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment" />


        <TextView
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:padding="@dimen/text_padding"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/save"
            tools:text="@string/save"
            android:gravity="center_horizontal" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
